--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <title>Selamat Datang di Tes Psikologi Entrepreneur</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="backdrop-blur-sm bg-cover bg-fixed bg-center h-screen flex flex-col justify-center items-center" style="background-image: url(2.png)" >
-    <div class=" max-w-lg text-center md:max-w-1xl lg:max-w-1xl mt-10 bg-gray-800 p-6 rounded-[40px] shadow-lg">
-        <h1 class="text-3xl lg:text-4xl font-bold mb-4 text-gray-50 mt-20">SELAMAT DATANG!</h1>
-        <h1 class="text-3xl lg:text-4xl font-bold mb-4 text-gray-50 mt-0">DI TEST PSIKOLOGI ENTERPRENEUR</h1>
-        <p class="text-lg lg:text-2xl mb-6 text-gray-50 mt-20">Tes ini dirancang untuk mengukur sejauh mana Anda memiliki jiwa entrepreneur. Dengan mengikuti tes ini, Anda dapat mengetahui apakah Anda memiliki potensi menjadi seorang entrepreneur yang sukses.</p>
-        <p class="text-lg lg:text-2xl mb-6 text-gray-50 mt-20">Jawab setiap pertanyaan dengan jujur dan hasilnya akan membantu Anda memahami diri Anda lebih baik.</p>
-        <a href="tes.html" class="mt-20 flex justify-center gap-2 items-center 
+<body class="bg-gray-900 justify-center flex">
+    <div class="max-w-lg text-center mt-10 border-8 m-8 bg-gray-200 p-5 rounded-[40px] shadow-lg">
+        <h1 class="text-3xl lg:text-4xl font-bold mb-4 text-gray-900 mt-10">SELAMAT DATANG!</h1>
+        <h1 class="text-3xl lg:text-4xl font-bold mb-4 text-gray-900 ">DI TEST PSIKOLOGI ENTERPRENEUR</h1>
+        <p class="text-lg lg:text-ms mb-6 text-gray-900 mt-10">KREKI ( KOMUNITAS RELAWAN EMERGENSI KESEHATAN INDONESIA ) bersama INDOHCF ( INDONESIA HEALTHCARE FORUM ) , mengajak Bpk /Ibu / Sdr / Sdri melakukan self assesment , apakah kita mempunyai jiwa entrepreneur  
+Sekaligus memotivasi agar jiwa *entrepreneur*kita meningkat dg berusaha  meraih score tinggi .
+</p>
+        <p class="text-lg lg:text-ms mb-6 text-gray-900 mt-1">Jawab setiap pertanyaan dengan jujur dan hasilnya akan membantu Anda memahami diri Anda lebih baik.</p>
+        <a href="tes.html" class="mt-10 flex justify-center gap-2 items-center 
         mx-auto shadow-xl text-lg bg-gray-50 backdrop-blur-md lg:font-semibold 
         isolation-auto border-gray-50 before:absolute before:w-full before:transition-all 
         before:duration-700 before:hover:w-full before:-left-full before:hover:left-0 
@@ -20,6 +22,5 @@
         before:hover:scale-150 before:hover:duration-700 relative z-10 px-8 py-4 overflow-hidden border-2 
         rounded-full group">Mulai</a>
     </div>
-
 </body>
 </html>
